Add PokemonList and PokemonItem components

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "babel-node server.js",
     "lint": "eslint src",
-    "test": "_mocha --compilers js:babel-core/register --recursive",
+    "test": "_mocha --compilers js:babel-core/register --recursive -r test/TestUtils",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
@@ -43,6 +43,8 @@
   },
   "dependencies": {
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   }
 }
