--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "chai": "^3.5.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
