--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "babel-node server.js",
     "lint": "eslint src",
     "test": "_mocha --compilers js:babel-core/register --recursive -r test/TestUtils",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "setup": "rm -r dist && mkdir -p dist && cd dist && git init &&  git remote add origin git@github.com:vieiralucas/reakedex.git && git checkout -b gh-pages && cd ..",
+    "build": "NODE_ENV=production webpack --progress && cp index.html dist/index.html && npm run sed",
+    "sed": "sed -i -e 's/\\/static\\/bundle.js/\\.\\/bundle.min.js/g' dist/index.html",
+    "gh-pages": "cd dist && git add . -A && git commit -m 'Deploy' && git push origin gh-pages -f",
+    "deploy": "npm run build && npm run gh-pages"
   },
   "repository": {
     "type": "git",
