--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Reakedex is a pokedex build with react backed by pokeapi.co",
   "scripts": {
     "start": "babel-node server.js",
-    "lint": "eslint src",
+    "lint": "eslint \"src/**/*.js\" \"test/**/*.js\"",
+    "lint:watch": "nodemon --exec eslint \"src/**/*.js\" \"test/**/*.js\"",
     "test": "_mocha --compilers js:babel-core/register --recursive -r test/TestUtils",
     "test:watch": "npm run test -- --watch",
     "setup": "mkdir -p dist && cd dist && git init &&  git remote add origin git@github.com:vieiralucas/reakedex.git && git checkout -b gh-pages && cd ..",
@@ -45,6 +46,7 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mocha": "^2.5.3",
+    "nodemon": "^1.9.2",
     "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.1",
@@ -55,6 +57,8 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.6.0",
+    "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
